--- a/index.html
+++ b/index.html
@@ -2002,31 +2002,6 @@
                 Let's try BRUTE as the next level password. Worked! nailed it. I wish I had something cooler (and don't worry there are cooler tools out there that we could tell to brute force strings like this. Or brute force passwrods and we will learn about these). But for now, with what we know, this isn't too bad. Just a lot of time and guess work. See you in level 4!
             </p>
         </div>
-
-        <button class="accordion">Krypton 4</button>
-        <div class="panel">
-            <p>
-                Another kinda hard one. The Over The Wire Website does  pretty good job explaining what is going on with this cipher. So we have our <em>source string</em>, the message we want ot encrypt and a <em>word</em> we then use as a key. 
-            </p>
-            <p>
-                So we can index all the letters of the alphabet, starting from a and we can number it 0. b can be 1 etc. We can then use this index on the letters in our word and in the message. With some funky math we can then get a new word. 
-            </p>
-            <p>
-                We are also lucky in that we know the key legnth. What we can deduce from this and the fact that certain letters appear more than others in the english language, is that somewhere along the way certain clusters of translation will occur. So for a six letter string like: <em>catdog</em> eventualy the letter <em>c</em> from cat will encrypt the same letter multiple times and result in the same output letter. So <em>c</em> being used to encrypt <em>e</em> will always result in the same answer: <em>g</em>
-            </p>
-            <p>
-                So now we need to code a way to decrypt this. The bandit systems have python installed on them so you can script something in that. You could also try C I think. But again. This is where I will encourage you to search for code or scripts online and on github that can already do this kind of thing for you. Feel free to try and write them. At the very least before you upload them read them and understand what they are doing and why and then at a later date try and write something. 
-            </p>
-            <p>
-                Another little side note here would be. The amount of scripting and coding is going to increase. If you want to take a break from these and learn some scripting and coding. Do it. It will need to be done at some point. You can also do some of the <em>NATAS</em> walkthroughs while you learn some scripting.
-            </p>
-            <p>
-                Personally I found this gihub and used these scripts to decode the ciphers. <a href="https://github.com/m-rosinsky/Krypton_Scripts">Scripts</a>. All credit to the author. He also has great youtube videos that also cover the challenges. 
-            </p>
-            <p>
-                Run these, get the password and I will see yo uin the next level
-            </p>
-        </div>
     </div>
 
     <button class="accordion">Natas +</button>
@@ -2112,6 +2087,34 @@
             </p>
         </div>
 
+        <button class="accordion">Natas 3</button>
+        <div class="panel">
+            <p>
+                Another fun one. Same message, nothing on this page. Well... source code.... Mmmm... Now we have a comment saying not even google will find it. 
+            </p>
+            <p>
+                This is a very cute hint to something known as <em>robots.txt</em>. In short this file is meant to tell search engines (such as google), which directories on your webserver it is not supposed to index (not keep a record of and allow access to from the world). If however this file is incorectly configured... well we will be able to access what it was meant to hide from us.
+            </p>
+            <p>
+                So let's see what this file has for us!
+            </p>
+            <pre class="codeBlocks">
+                <code>
+                    natas3.natas.labs.overthewire.org/robots.txt
+                </code>
+            </pre>
+            <p>
+                Looks like it want to hide <strong>s3cr3t</strong> from us. Time to go look at this secret:
+            </p>
+            <pre class="codeBlocks">
+                <code>
+                    natas3.natas.labs.overthewire.org/s3cr3t/
+                </code>
+            </pre>
+            <p>
+                Nice! A <strong>user.txt</strong> file with the password! See you in Natas 4!
+            </p>
+        </div>
     </div>
 
     
