--- a/index.html
+++ b/index.html
@@ -2128,7 +2128,7 @@
                 Enable your proxy to redirect to your BurpSuite, turn <strong>intercept on</strong> and refresh the Natas web page. 
             </p>
             <p>
-                You should now see the whole packet that gets sent to the Natas web server. That's pretty cool! And as we go through this and we will learn more about what all of this is. 
+                You should now see the whole packet that gets sent to the Natas web server. That's pretty cool! And as we go through this we will learn more about what all of this is. 
             </p>
             <p>
                 On line 9 we will see a <strong>Referer</strong>. What is this? Basically if you were linked from another web page, that info would be listed here. And the info on the natas 4 pages tell us only people linked from <strong>5</strong> can access this page. So now all we need to do is change the referer to say that's where we are from and we are golden. 
